--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         };
 
         const params = new URLSearchParams({
-            q: ${filename} in:file repo:prnygupta/dreamhouse-lwc ref:master
+            q: 'Create_property' in:file repo:prnygupta/dreamhouse-lwc ref:master
         });
 
         fetch(${url}?${params.toString()}, {
